--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Free Python Algorithms">
+    <meta name="keywords" content="python, python algorithms">
+    <meta name="author" content="Siddhesh Agarwal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Cheatsheet</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Python Algorithms</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link href="prism.css" rel="stylesheet">
     <script src="prism.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -16,7 +19,7 @@
             <img src="Python_logo.png" height="50" width="50" alt="HTML logo">
         </span>
         <div class="content center">
-            Python Cheatsheet
+            Python Algorithms
         </div>
     </nav>
     <div class="container">
