--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
         outputArray[newPosition] = currentEl
         i -= 1
 
-    return outputArray
-                </code></pre>
+    return outputArray</code></pre>
             </ul>
         </details>
         <details>
