--- a/index.html
+++ b/index.html
@@ -47,7 +47,22 @@
         value = str(self.value) + " "
         left = str(self.left or "")
         right = str(self.right or "")
-        return value + left + right</code></pre>
+        return value + left + right
+        
+    def insert(self, data):
+        if self.data:
+            if data < self.data:
+                if self.left is None:
+                    self.left = Node(data)
+                else:
+                    self.left.insert(data)
+            elif data > self.data:
+                if self.right is None:
+                    self.right = Node(data)
+                else:
+                    self.right.insert(data)
+        else:
+            self.data = data</code></pre>
             <li>Queue</li>
             <pre class="language-py"><code>class Queue:
     def __init__(self):
