--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
         return self.data
 
 class LinkedList:
-    def __init__(self):
+    def __init__(self, nodes=None):
         self.head = None
+        if nodes is not None:
+            node = Node(data=nodes.pop(0))
+            self.head = node
+            for elem in nodes:
+                node.next = Node(data=elem)
+                node = node.next
 
     def __repr__(self):
         node = self.head
