--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Free Python Algorithms">
-    <meta name="keywords" content="python, python algorithms">
+    <meta name="description" content="Python Algorithms">
+    <meta name="keywords" content="python, algorithms">
     <meta name="author" content="Siddhesh Agarwal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Algorithms</title>
@@ -252,8 +252,8 @@ def jump_search(arr, element):
                 <pre class="language-py"><code># Linear Search - time complexity: O(n)
 def LinearSearch(arr, element):
     for i in range(len(arr)):
-    if arr[i] == element:
-        return i
+        if arr[i] == element:
+            return i
     return -1</code></pre>
         </ol>
         <h1 id="sorting-techniques">Sorting Techniques</h1>
