--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="sidenav">
         <a href="#data-structures">Data Structures</a>
         <a href="#primes">Primes</a>
+        <a href="#regex">Regex</a>
         <a href="#searching-techniques">Searching Techniques</a>
         <a href="#sorting-techniques">Sorting Techniques</a>
     </div>
@@ -214,6 +215,7 @@ class Stack:
         """Check if the stack is full"""
         return self.__len__() == self.limit</code></pre>
         </ol>
+        <hr>
         <h1 id="primes">Primes</h1>
         <ol>
             <li>Mersene Primes</li>
@@ -223,8 +225,9 @@ class Stack:
             return False
     return True
 
-def mersene_prime(num):
-    """Returns prime number (of the form 2^k - 1) less than or equal to the given number
+def mersenne_prime(num):
+    """Returns mersenne prime number less than or equal to the given number.
+    mersenne primes are prime numbers of the form 2^n - 1.
     >>> mersene_prime(10)
     [3, 7]
     >>> mersene_prime(100)
@@ -232,11 +235,12 @@ def mersene_prime(num):
     """
     arr = []
     power = 1
-    value = 2 ** power
+    value = 2 ** power - 1
     while value < num:
         if is_prime(value):
             arr.append(value)
-        value += 1
+        power += 1
+        value = 2 ** power - 1
     return arr</code></pre>
             <li>Palindrome Primes</li>
             <pre class="language-py"><code>def is_palindrome(num):
@@ -244,61 +248,114 @@ def mersene_prime(num):
     return num == num[::-1]
 
 def palindrome_prime(num):
-    """Returns the prime numbers less than or equal to the given number which are palindromes
+    """Returns the prime numbers less than or equal to the given number which are palindromes.
+    Plaindromes are numbers/strings that are the same when read from left to right and right to left.
     >>> palindrome_prime(10)
     [2, 3, 5, 7]
     >>> palindrome_prime(20)
     [2, 3, 5, 7, 11]
     """
-    prime = [True] * (n + 1)
+    prime = [True] * (num + 1)
     p = 2
-    while (p * p <= n):
+    while (p ** 2 <= num):
         if prime[p]:
-            for i in range(p * 2, n + 1, p):
+            for i in range(p * 2, num + 1, p):
                 prime[i] = False
         p += 1
 
     arr = []
-    for p in range(2, n + 1):
-        if (prime[p] and isPal(p)):
+    for p in range(2, num + 1):
+        if (prime[p] and is_palindrome(p)):
             arr.append(p)
     return arr</code></pre>
                 <li>Sieve of Eratosthenes</li>
-            <pre class="language-py"><code>def SieveOfEratosthenese(n: int):
+            <pre class="language-py"><code>def sieve_of_eratosthenese(num):
     """Returns a list of prime numbers less than or equal to the given number."""
-    sieve = [num for num in range(2, n)]
+    sieve = [num for num in range(2, num)]
     key = 0
     while key < len(sieve):
         prime = sieve[key]
-        for i in range(2 * prime, n, prime):
+        for i in range(2 * prime, num, prime):
             if i in sieve:
                 sieve.remove(i)
     return sieve</code></pre>
             <li>Sophie Germain Primes</li>
-            <pre class="language-py"><code>def sieve(n, prime) :
-    p = 2
-    while p ** 2 <= n:
-        if prime[p]:
-            for i in range(p * 2, n, p):
-                prime[i] = False   
-        p += 1
-
-def sophie_germain_prime(n):
+            <pre class="language-py"><code>def sophie_germain_prime(num):
     """Returns all Sophie Germain Prime numbers less than or equal to the given number.
-    A prime number p is called Sophie Germain Prime number if 2*p + 1 is also prime.
+    A prime number p is called Sophie Germain Prime number if (2*p + 1) is also prime.
     >>> sophie_germain_prime(25)
     [2, 3, 5, 11, 23]
     >>> sophie_germain_prime(50)
     [2, 3, 5, 11, 23, 29, 41]
     """
-    prime = [True]*(2 * n + 1)
-    sieve(2 * n + 1, prime)
+    prime = sieve_of_eratosthenese(2 * num + 1)
     arr = []
     for i in range(2, n + 1) :
-        if (prime[i] and prime[2 * i + 1]) :
+        if i in prime and (2 * i + 1) in prime:
             arr.append(i)
     return arr</code></pre>
         </ol>
+        <hr>
+        <h1 id="regex">Regex</h1>
+        <ol>
+            <li>Address Validation</li>
+            <pre class="language-py"><code>import regex as re
+
+# regex for address validation
+def address_validation(address):
+    regex = r'^[a-zA-Z0-9\s,.-]{2,}$'
+    return re.search(regex, address)</code></pre>
+            <li>Date Validation</li>
+            <pre class="language-py"><code>import regex as re
+
+# regex for date validation (DD/MM/YYYY)
+def date_validation(date):
+    regex = r'^(1[0-2]|0[1-9])/(3[01]|[12][0-9]|0[1-9])/[0-9]{4}$'
+    return re.search(regex, date)</code></pre>
+            <li>Email Validation</li>
+            <pre class="language-py"><code>import regex as re
+
+# regex for email validation
+def email_validation(email):
+    regex = r'(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$)'
+    return re.search(regex, email)</code></pre>
+            <li>Name Validation</li>
+            <pre class="language-py"><code>import regex as re
+
+# regex for name validation
+def name_validation(name):
+    regex = r'^[a-zA-Z]{2,}$'
+    return re.search(regex, name)</code></pre>
+            <li>Password Validation</li>
+            <pre class="language-py"><code>import regex as re
+
+# regex for password validation
+def password_validation(password):
+    regex = r'^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$'
+    return re.search(regex, password)</code></pre>
+            <li>Phone Number Validation</li>
+            <pre class="language-py"><code>import regex as re
+
+# regex for phone number validation
+def phone_validation(phone):
+    regex = r'^[0-9]{10}$'
+    return re.search(regex, phone)</code></pre>
+            <li>URL Validation</li>
+            <pre class="language-py"><code>import regex as re
+
+# regex for url validation
+def URL_validation(url):
+    regex = r'^(?:http(s)?:\/\/)?[\w.-]+(?:\.[\w\.-]+)+[\w\-\._~:/?#[\]@!\$&\'\(\)\*\+,;=.]+$'
+    return re.search(regex, url)</code></pre>
+            <li>IP Address Validation</li>
+            <pre class="language-py"><code>import regex as re
+
+# regex for IP address validation IPv4
+def IP_validation(IP):
+    regex = r'(\b25[0-5]|\b2[0-4][0-9]|\b[01]?[0-9][0-9]?)(\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)){3}'
+    return re.search(regex, IP)</code></pre>
+        </ol>
+        <hr>
         <h1 id="searching-techniques">Searching Techniques</h1>
         <ol>
             <li>Binary search</li>
@@ -342,6 +399,7 @@ def LinearSearch(arr, element):
             return i
     return -1</code></pre>
         </ol>
+        <hr>
         <h1 id="sorting-techniques">Sorting Techniques</h1>
         <ol>
             <li>Bead sort</li>
