--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header>
         <span class="logo">
-            <img src="img/Python_logo.png" height="50" width="50" alt="HTML logo">
+            <img src="img/Python-512x512.png" alt="Python logo" height="50" width="50">
         </span>
         <div class="content">
             <a href="index.html">Python Algorithms</a>
