--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Sidebar -->
     <div class="sidenav">
-        <a href="basics.html">Basics</a>
+        <a href="basics.html" class="active">Basics</a>
         <a href="#base-conversions">Base Conversions</a>
         <a href="#data-structures">Data Structures</a>
         <a href="#math">Math</a>
@@ -763,7 +763,7 @@ def LinearSearch(arr, element):
     </div>
 
     <div class="arrow">
-        <button><a href="#">Up</a></button>
+        <button><a href="index.html">Up</a></button>
     </div>
 </body>
 </html>
