--- a/basics.html
+++ b/basics.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Python Algorithms">
-    <meta name="keywords" content="python, algorithms">
+    <meta name="description" content="Python Basics">
+    <meta name="keywords" content="python, basics, beginner">
     <meta name="author" content="Siddhesh Agarwal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#1e2327">
@@ -28,18 +28,24 @@
 
     <!-- Sidebar -->
     <div class="sidenav">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html" class="active">DSA</a>
+        <a href="#input-output">Input/Output</a>
+        <a href="#data-types">Data Types</a>
         <a href="#variables">Variables</a>
         <a href="#operators">Operators</a>
         <a href="#control-flow">Control Flow</a>
+        <a href="#functions">Functions</a>
         <a href="#exception-handling">Exception Handling</a>
     </div>
 
     <!-- Main Content -->
     <div class="container">
+        <h1 id="input-output">Input/Output</h1>
+        <h1 id="data-types">Data Types</h1>
         <h1 id="variables">Variables</h1>
         <h1 id="operators">Operators</h1>
         <h1 id="control-flow">Control Flow</h1>
+        <h1 id="functions">Functions</h1>
         <h1 id="exception-handling">Exception Handling</h1>
     </div>
 
