--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <img src="img/Python-512x512.png" alt="Python logo" height="50" width="50">
         </span>
         <div class="content">
-            <a href="index.html">Python Algorithms</a>
+            <a href="">Python Algorithms</a>
         </div>
     </header>
 
     <!-- Sidebar -->
     <div class="sidenav">
-        <a href="basics.html" class="active">Basics</a>
+        <a href="basics.html" class="disabled">Python Basics</a>
         <a href="#base-conversions">Base Conversions</a>
         <a href="#data-structures">Data Structures</a>
         <a href="#math">Math</a>
@@ -763,7 +763,7 @@ def LinearSearch(arr, element):
     </div>
 
     <div class="arrow">
-        <button><a href="index.html">Up</a></button>
+        <button><a href="">Up</a></button>
     </div>
 </body>
 </html>
