--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a href="#base-conversions">Base Conversions</a>
         <a href="#data-structures">Data Structures</a>
         <a href="#math">Math</a>
+        <a href="#one-liners">One Liners</a>
         <a href="#primes">Primes</a>
         <a href="#regex">Regex</a>
         <a href="#searching-techniques">Searching Techniques</a>
@@ -343,6 +344,62 @@ class Stack:
             <li>LCM</li>
             <pre class="line-numbers"><code class="language-py">def lcm(a, b):
     return (a * b // gcd(a, b))</code></pre>
+        </ol>
+        <hr>
+
+        <!--One liners-->
+        <h1 id="one-liners">One Liners</h1>
+        <ol>
+            <li>Converting Decimal code (R, G, B) to hex code</li>
+            <pre class="line-numbers"><code class="language-py">rgb_to_hex = lambda rgb: '%02x%02x%02x' % rgb</code></pre>
+            <li>Converting Hex code to Decimal code (R, G, B)</li>
+            <pre class="line-numbers"><code class="language-py">hex_to_rgb = lambda h: tuple(int(h[i: i+2], 16) for i in (0, 2, 4))</code></pre>
+            <li>Current date (DD-MM-YY) and time</li>
+            <pre class="line-numbers"><code class="language-py">import datetime from datetime
+now = lambda: datetime.now().strftime('%d-%m-%y %H:%M:%S')</code></pre>
+            <li>Fibonacci</li>
+            <pre class="line-numbers"><code class="language-py">fibonacci = lambda x: x if x<=1 else fibonacci(x-1) + fibonacci(x-2)
+# >>> fibonacci(10)
+# 55</code></pre>
+            <li>Find if string is a palindrome</li>
+            <pre class="line-numbers"><code class="language-py">is_palindrome = lambda s: s == s[::-1]
+# >>> is_palindrome("abdba")
+# True</code></pre>
+            <li>Find the index of an item in a list</li>
+            <pre class="line-numbers"><code class="language-py">lst.index(item)</code></pre>
+            <li>Find the last index of an item in a list</li>
+            <pre class="line-numbers"><code class="language-py">lst.index(item, start, end)</code></pre>
+            <li>Flatten a list</li>
+            <pre class="line-numbers"><code class="language-py">[i for sublist in lst for i in sublist]</code></pre>
+            <li>Input space seperated integers</li>
+            <pre class="line-numbers"><code class="language-py">list(map(int, input().split()))</code></pre>
+            <li>List comprehension</li>
+            <pre class="line-numbers"><code class="language-py">[i for i in range(10)]
+# [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+
+[i for i in range(10) if i % 2 == 0]
+# [0, 2, 4, 6, 8]
+
+[i for i in range(10) if i % 2 == 1]
+# [1, 3, 5, 7, 9]
+
+[i for i in range(10) if i % 2 == 0 and i % 3 == 0]
+# [0, 6]
+
+[i for i in range(10) if i % 2 == 0 or i % 3 == 0]
+# [0, 2, 3, 4, 6, 8, 9]</code></pre>
+            <li>Sum of all the numbers in a list</li>
+            <pre class="line-numbers"><code class="language-py">list_sum = lambda lst: sum(lst)
+# >>> list_sum([2, 38, 267, 82])
+# 389</code></pre>
+            <li>Swap two variables</li>
+            <pre class="line-numbers"><code class="language-py">a, b = b, a</code></pre>
+            <li>Read a file, line by line</li>
+            <pre class="line-numbers"><code class="language-py">print([line.strip() for line in open("readFile.py")])</code></pre>
+            <li>Reverse a string/list</li>
+            <pre class="line-numbers"><code class="language-py">reverse = lambda s: s[::-1]
+#reverse("Hello, world!")</code></pre>
+
         </ol>
         <hr>
 
