--- a/basics.html
+++ b/basics.html
@@ -22,13 +22,13 @@
             <img src="img/Python-512x512.png" alt="Python logo" height="50" width="50">
         </span>
         <div class="content">
-            <a href="basics.html">Python Algorithms</a>
+            <a href="">Python Algorithms</a>
         </div>
     </header>
 
-    <!-- Sidebar -->
+    <!-- Collapsible Sidebar -->
     <div class="sidenav">
-        <a href="index.html" class="active">DSA</a>
+        <a href="dsa.html" class="active">DSA</a>
         <a href="#input-output">Input/Output</a>
         <a href="#data-types">Data Types</a>
         <a href="#variables">Variables</a>
@@ -50,7 +50,7 @@
     </div>
 
     <div class="arrow">
-        <button><a href="basics.html">Up</a></button>
+        <button><a href="">Top</a></button>
     </div>
 </body>
 </html>
