--- a/dsa.html
+++ b/dsa.html
@@ -28,7 +28,7 @@
 
     <!-- Sidebar -->
     <div class="sidenav">
-        <a href="basics.html" class="disabled">Python Basics</a>
+        <a href="basics.html" class="active">Python Basics</a>
         <a href="#base-conversions">Base Conversions</a>
         <a href="#data-structures">Data Structures</a>
         <a href="#math">Math</a>
@@ -820,7 +820,7 @@ def LinearSearch(arr, element):
     </div>
 
     <div class="arrow">
-        <button><a href="">Up</a></button>
+        <button><a href="">Top</a></button>
     </div>
 </body>
 </html>
