--- a/basics.html
+++ b/basics.html
@@ -28,7 +28,7 @@
 
     <!-- Collapsible Sidebar -->
     <div class="sidenav">
-        <a href="dsa.html" class="active">DSA</a>
+        <a href="index.html" class="active">DSA</a>
         <a href="#input-output">Input/Output</a>
         <a href="#data-types">Data Types</a>
         <a href="#variables">Variables</a>
