--- a/basics.html
+++ b/basics.html
@@ -29,11 +29,11 @@
     <!-- Collapsible Sidebar -->
     <div class="sidenav">
         <a href="index.html" class="active">DSA</a>
+        <a href="#comments">Comments</a>
         <a href="#variables">Variables</a>
         <a href="#input-output">Input/Output</a>
-        <a href="#comments">Comments</a>
-        <a href="#data-types">Data Types</a>
         <a href="#operators">Operators</a>
+        <a href="#data-types">Data Types</a>
         <a href="#control-flow">Control Flow</a>
         <a href="#functions">Functions</a>
         <a href="#exception-handling">Exception Handling</a>
@@ -41,8 +41,30 @@
 
     <!-- Main Content -->
     <div class="container">
+        <h1 id="comments">Comments</h1>
+        <p>Comments are used to explain the code. They are not executed.</p>
+        <ol>
+            <li>Single Line Comments</li>
+            <pre class="line-numbers"><code class="language-py"># This is a single-line comment</code></pre>
+            <li>Multi Line Comments</li>
+            <pre class="line-numbers"><code class="language-py">"""This         
+is a 
+multi-line 
+comment"""</code></pre>
+        </ol>
         <h1 id="variables">Variables</h1>
+        <p>Variables are used to store values. They are declared using the keyword <code>var</code>.</p>
+        <ol>
+            <li>Declaring Variables</li>
+            <pre class="line-numbers"><code class="language-py">x = 5
+y = "Hello World!"
+z = [1, 2, 3]</code></pre>
+            <li>Assigning Values</li>
+            <pre class="line-numbers"><code class="language-py">x = 5
+x = x + 1      # new value of x is 6</code></pre>
+        </ol>
         <h1 id="input-output">Input/Output</h1>
+        <p>Input and Output are used to interact with the user. They are used to get and set values.</p>
         <ol>
             <li>Input</li>
             <pre class="line-numbers"><code class="language-py">var01 = input()                                    # Used to input strings
@@ -67,24 +89,47 @@ print("Hello World!", end="\f")  # Used to output strings with a form feed
 print("Hello World!", end="\a")  # Used to output strings with an alert
 print("Hello World!", end="\b")  # Used to output strings with a backspace
 print("Hello World!", end="\v")  # Used to output strings with a vertical tab
-print(1, 2, 3, sep="-")          # Used to output multiple values with a separator between them
-</code></pre>
+print(1, 2, 3, sep="-")          # Used to output multiple values with a separator between them</code></pre>
             <li>Input/Output</li>
             <pre class="line-numbers"><code class="language-py">print(input())                          # Used to output strings
 print(input("Enter your name: "))       # Used to output strings with a prompt</code></pre>
         </ol>
-        <h1 id="comments">Comments</h1>
+        <h1 id="operators">Operators</h1>
+        <p>Operators are used to perform operations on values. They are used to perform arithmetic, relational, logical, and bitwise operations.</p>
         <ol>
-            <li>Single Line Comments</li>
-            <pre class="line-numbers"><code class="language-py"># This is a single-line comment</code></pre>
-            <li>Multi Line Comments</li>
-            <pre class="line-numbers"><code class="language-py">"""This         
-is a 
-multi-line 
-comment"""</code></pre>
+            <li>Arithmetic Operators</li>
+            <pre class="line-numbers"><code class="language-py">x = 5
+y = 10
+z1 = x + y  # addition
+z2 = x - y  # subtraction
+z3 = x * y  # multiplication
+z4 = x / y  # division
+z5 = x % y  # modulus
+z6 = x ** y # exponent</code></pre>
+            <li>Relational Operators</li>
+            <pre class="line-numbers"><code class="language-py">x = 5
+y = 10
+z1 = x > y     # greater than
+z2 = x < y     # less than
+z3 = x >= y    # greater than or equal to
+z4 = x <= y    # less than or equal to
+z5 = x == y    # equal to
+z6 = x != y    # not equal to</code></pre>
+            <li>Logical Operators</li>
+            <pre class="line-numbers"><code class="language-py">x = 5
+y = 10
+z1 = x > y and y > x    # and
+z2 = x > y or y > x     # or
+z3 = not x > y          # not</code></pre>
+            <li>Bitwise Operators</li>
+            <pre class="line-numbers"><code class="language-py">x = 5
+y = 10
+z1 = x & y    # bitwise and
+z2 = x | y    # bitwise or
+z3 = x ^ y    # bitwise xor
+z4 = ~x       # bitwise not</code></pre>
         </ol>
         <h1 id="data-types">Data Types</h1>
-        <h1 id="operators">Operators</h1>
         <h1 id="control-flow">Control Flow</h1>
         <h1 id="functions">Functions</h1>
         <h1 id="exception-handling">Exception Handling</h1>
