--- a/basics.html
+++ b/basics.html
@@ -22,11 +22,11 @@
             <img src="img/Python-512x512.png" alt="Python logo" height="50" width="50">
         </span>
         <div class="content">
-            <a href="">Python Algorithms</a>
+            <a href="">Python Basics</a>
         </div>
     </header>
 
-    <!-- Collapsible Sidebar -->
+    <!-- Sidebar in Laptop and tablet/Topbar in Mobile -->
     <div class="sidenav">
         <a href="index.html" class="active">DSA</a>
         <a href="#comments">Comments</a>
@@ -261,9 +261,13 @@ z4 = ~x       # bitwise not</code></pre>
     print(x.strip().isalpha()) # Prints True because it doesn't contain a space</code></pre>
             </ol>
             <h2 id="lists">Lists</h2>
+            <p>Lists are used to store multiple values in a single variable. They are mutable, and can contain any type of data.</p>
             <h2 id="tuples">Tuples</h2>
+            <p>Tuples are used to store multiple values in a single variable. They are immutable, which means they can't be changed.</p>
             <h2 id="dictionaries">Dictionaries</h2>
+            <p>Dictionaries are used to store key-value pairs. They are used to store data in a structured way.</p>
             <h2 id="sets">Sets</h2>
+            <p>Sets are used to store unique values. They are used to store data in a structured way.</p>
         </div>
         <hr>
 
